# simulation-llm-micro-economy

./: .gitignore  LICENSE  Makefile  README.md  analysis_deep.py  benchmark_report_v3.md  charts.py  compare_benchmark.py  dgp.html  dgp.py  dgp_personas.py  experiments.html  experiments.py  index.html  llm_agent.py  metrics.py  models.py  prompt_translator.py  pyproject.toml  requirements.txt  run_dgp.py  run_experiment.py  run_llm_benchmark.py  server.py  simulation.py
.github/workflows/: ci.yml
scripts/: charts.py  run_experiment.py  run_llm_benchmark.py
src/micro_economy/: dgp.py  dgp_personas.py  experiments.py  llm_agent.py  metrics.py  models.py  prompt_translator.py  simulation.py
tests/: test_dgp.py  test_dgp_personas.py  test_prompt_translator.py  test_simulation.py
