[project]
name = "simulation-llm-micro-economy"
version = "0.1.0"
description = "LLM-powered micro-economy simulation with emergent trading behavior"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.30.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
serve = "server:app"
