[project]
name = "micro-economy"
version = "0.1.0"
description = "LLM-powered micro-economy simulation with emergent trading behavior"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.30.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/micro_economy"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/micro_economy/experiments.py" = ["E501"]
"run_experiment.py" = ["E402"]
"run_llm_benchmark.py" = ["E402"]
"server.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["micro_economy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
